--- a/style/base.css
+++ b/style/base.css
@@ -11,9 +11,20 @@ header {
     text-align: center;
 }
 
+.header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 header img {
     width: 15%;
     height: 5%;
+    margin-right: 10px;
+}
+
+header h1 {
+    margin: 0;
 }
 
 nav {
@@ -50,3 +61,4 @@ footer {
     color: #fff;
     padding: 10px;
     text-align: center;
+}
