--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -50,7 +50,16 @@ nav ul li a {
 
 nav ul li a:hover {
     background-color: #00509e;
-    /* Medium blue */
+}
+
+.banner {
+    text-align: center;
+    margin-top: 0px;
+}
+
+.banner img {
+    max-width: 100%;
+    height: auto;
 }
 
 .hero {
@@ -122,6 +131,17 @@ nav ul li a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+
+.map-container {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.map-container iframe {
+    max-width: 100%;
+}
+
+
 footer {
     background-color: #003366;
     /* Dark blue */
@@ -149,5 +169,3 @@ footer {
     background-color: rgba(0, 0, 0, 0.4);
     padding-top: 60px;
 }
-
-.modal-content {
