--- a/style/base.css
+++ b/style/base.css
@@ -19,7 +19,7 @@ header {
 
 header img {
     width: 15%;
-    height: 5%;
+    height: auto;
     margin-right: 10px;
 }
 
@@ -38,7 +38,6 @@ header h1 {
 }
 
 #menu::before {
-
     content: "≡";
 }
 
@@ -51,7 +50,6 @@ nav {
     margin: 0 auto;
     max-width: 760px;
 }
-
 
 .navigation li {
     display: none;
@@ -69,7 +67,7 @@ nav {
 }
 
 .navigation a:hover,
-navigation a:active {
+.navigation a:active {
     color: white;
     background-color: black;
 }
@@ -96,7 +94,6 @@ navigation a:active {
         text-align: center;
     }
 
-
     .navigation a::after {
         content: '';
         position: absolute;
@@ -112,13 +109,10 @@ navigation a:active {
         width: 100%;
     }
 
-
     #menu {
         display: none;
     }
 }
-
-
 
 main {
     max-width: 800px;
@@ -132,14 +126,25 @@ main {
     margin: 10px auto;
     position: relative;
     border: 1px solid rgba(0, 0, 0, .1);
-    height: 300px;
+    height: 50vh;
+    overflow: hidden;
+}
+
+.hero picture,
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .herolabel {
     position: absolute;
     top: 30px;
     left: 30px;
-    background: radial-gradient(#fff, )
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .card {
@@ -150,8 +155,6 @@ main {
 ul {
     list-style-type: none;
     padding: 0;
-    position: relative;
-    margin-top: 40vh;
 }
 
 #map-container {
