--- a/lesson09/styles/prophets.css
+++ b/lesson09/styles/prophets.css
@@ -16,11 +16,11 @@ header h1 {
 }
 
 main {
-    max-width: 1200px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
 }
 
@@ -46,4 +46,10 @@ footer {
     color: #fff;
     padding: 10px;
     text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
