--- a/final/styles/base.css
+++ b/final/styles/base.css
@@ -1,4 +1,63 @@
-@media screen and (max-width: 481px) {}
+@media screen and (max-width: 481px) {
+    body {
+        padding: 10px;
+    }
+
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav ul {
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+    }
+
+    nav ul li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .home-img {
+        width: 100%;
+        height: auto;
+    }
+
+    .home-container {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .cta button {
+        width: 100%;
+    }
+
+    .my-weather-box {
+        width: 100%;
+        margin: 20px 0;
+    }
+
+    #main {
+        margin: 20px;
+        padding: 20px;
+    }
+
+    form {
+        width: 100%;
+        padding: 10px;
+    }
+
+    #container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        width: 90%;
+        margin: 10px 0;
+    }
+}
 
 body {
     font-family: "Source Sans 3", sans-serif;
@@ -67,7 +126,7 @@ nav a {
 }
 
 .cta button {
-    background-color: #2b90ee;
+    background-color: #6abf69;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -224,7 +283,7 @@ button.my-button:hover {
 .my-button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #2c82f3;
+    background-color: #009688;
     color: #fff;
     text-align: center;
     text-decoration: none;
